# scanoss.py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLIENT_HELP.md  CONTRIBUTING.md  Dockerfile  GHCR.md  GHCR_BUILD.md  LICENSE  Makefile  PACKAGE.md  README.md  SBOM.json  SBOM.vex.json  WINNOWING.md  analyzer-result.yml  cert_download.sh  date_time.py  list.txt  pyproject.toml  requirements-dev.txt  requirements-scancode.txt  requirements.txt  scanoss-settings-schema.json  scanoss.json  setup.cfg  setup.py  version.py
.devcontainer/: Containerfile.dev  Dockerfile.dev  devcontainer.example.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: container-local-test.yml  container-publish-ghcr.yml  docker-image-build.yml  ghcr-publish.yml  lint.yml  python-local-test.yml  python-publish-pypi.yml  python-publish-testpypi.yml  python-publish.yml  python-test.yml  python-testpypi-publish.yml  scanoss.yml  schema-sync.yml  version-tag.yml
docs/source/: acknowledgement-annotations-examples.md  conf.py  index.rst  scanoss_settings_schema.rst
docs/source/_static/: scanoss-settings-schema.json
examples/: wfp_scan_example.py
examples/sample_code/: hello.c  utils.py
src/protoc_gen_swagger/: __init__.py
src/protoc_gen_swagger/options/: annotations_pb2.py  annotations_pb2.pyi  annotations_pb2_grpc.py  openapiv2_pb2.py  openapiv2_pb2.pyi  openapiv2_pb2_grpc.py
src/scanoss/: __init__.py  _winnowing.c  cli.py  components.py  constants.py  cryptography.py  csvoutput.py  cyclonedx.py  delta.py  file_filters.py  filecount.py  gitlabqualityreport.py  header_filter.py  line_filter.py  osadl.py  osadl_copyleft.py  results.py  scan_filter.py  scan_settings_builder.py  scancodedeps.py  scanner.py  scanoss_settings.py  scanossapi.py  scanossbase.py  scanossgrpc.py  scanpostprocessor.py  scansettings.py  scantype.py  spdxlite.py  syft.py  threadeddependencies.py  threadedscanning.py  winnowing.py
src/scanoss/api/common/: __init__.py
src/scanoss/api/semgrep/: __init__.py
src/scanoss/api/vulnerabilities/: __init__.py
src/scanoss/data/: osadl-copyleft.json  scanoss-settings-schema.json  syft-purl-text.tmpl
src/scanoss/export/: __init__.py  dependency_track.py
src/scanoss/inspection/: __init__.py  component_summary.py  copyleft.py  dependency_track.py  inspect_base.py  license_summary.py  policy_check.py  undeclared_component.py
src/scanoss/inspection/dependency_track/: project_violation.py
src/scanoss/inspection/policy_check/: policy_check.py
src/scanoss/inspection/raw/: component_summary.py  copyleft.py  license_summary.py  match_summary.py  (+2 more)
src/scanoss/inspections/: copyleft.py  policyCheck.py  undeclaredComponent.py
src/scanoss/scanners/: container_scanner.py  folder_hasher.py  scanner_base.py  scanner_config.py  scanner_hfh.py
src/scanoss/services/: dependency_track_service.py
src/scanoss/utils/: abstract_presenter.py  colorize.py  crc64.py  file.py  scanoss_scan_results_utils.py  simhash.py
tests/: cli-test.py  csvoutput-test.py  grpc-client-test.py  policy-inspect-test.py  scancodedeps-test.py  scanossapi-test.py  scanpostprocessor-test.py  syft-test.py  test_acknowledgement_output.py  test_bom_path_matching.py  test_cli.py  test_constants_values_test.py  test_csv_output.py  test_dependency_requirement.py  test_dependency_skip_patterns.py  test_file_filters.py  test_file_filters_additional.py  test_folder_hasher_unit.py  test_headers_filter.py  test_iter_wfp_files.py  test_line_filter.py  test_osadl.py  test_osadl_copyleft.py  test_policy-inspect.py  test_policy_inspect.py  test_scan_filter.py  test_scan_post_processor.py  test_scan_settings_builder.py  test_scan_wfp_file_threaded.py  test_scanner_hfh.py  test_spdxlite.py  test_winnowing.py  winnowing-test.py
tests/data/: .gitignore  comp-search-input.json  comp-versions-input.json  package.json  purl-input-with-requirement.json  purl-input.json  requirements.txt  result-no-copyleft.json  result.json  scancode-deps.json  scanoss.json
tests/data/header-files-test/: DataFrame.scala  HttpClient.kt  Package.swift  Parser.hs  Router.php  ServiceProvider.cs  StringUtils.hpp  ViewController.m  analysis.r  cache.lua  config.rs  core.clj  deploy.sh  handler.go  logger.rb  multiline_imports.py  parser.pl  server.ex  server.js  widget.dart
tools/: get_next_version.sh  linter.sh
(+36 files in other folders)
