[build-system]
requires = ["setuptools", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), isort (I), pylint (PL)
select = ["E", "F", "I", "PL"]
exclude = ["tests/*", "test_*.py", "src/scanoss/cli.py"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["scanoss"]