[metadata]
name = scanoss
version = attr: scanoss.__version__
author = SCANOSS
author_email = info@scanoss.com
description = Simple Python library to use the SCANOSS APIs
long_description = file: PACKAGE.md
long_description_content_type = text/markdown
url = https://scanoss.com
project_urls =
    Source = https://github.com/scanoss/scanoss.py
    Tracker = https://github.com/scanoss/scanoss.py/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    scanoss-py = scanoss.cli:main