[metadata]
name = scanoss
version = attr: scanoss.__version__
author = SCANOSS
author_email = info@scanoss.com
license = MIT
description = Simple Python library to leverage the SCANOSS APIs
long_description = file: PACKAGE.md
long_description_content_type = text/markdown
url = https://scanoss.com
project_urls =
    Source = https://github.com/scanoss/scanoss.py
    Tracker = https://github.com/scanoss/scanoss.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.7
install_requires =
    requests
    crc32c>=2.2
    binaryornot
    progress
    grpcio>1.42.0
    protobuf>3.19.1
    pypac
    pyOpenSSL
    google-api-core

[options.extras_require]
fast_winnowing =
    scanoss_winnowing>=0.3.0

[options.packages.find]
where = src

[options.package_data]
* = data/*.txt, data/*.json

[options.entry_points]
console_scripts =
    scanoss-py = scanoss.cli:main